Bugfix: GUI page overflow on Y axis

--- a/src/app/components/pages/inventory/inventory.component.css
+++ b/src/app/components/pages/inventory/inventory.component.css
@@ -1,11 +1,10 @@
-.container
-{
+.container {
     box-sizing: border-box;
     padding: 30px 30px 30px 30px;
-    background-image: url('../../../../assets/images/warehouse_blur.png');
+    background-image: url("../../../../assets/images/warehouse_blur.png");
     background-position: center;
     height: 100%;
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 .items {
@@ -55,12 +54,14 @@
     min-width: 100px;
 }
 
-.mat-column-stock, .mat-column-available {
+.mat-column-stock,
+.mat-column-available {
     width: 150px;
     min-width: 150px;
 }
 
-.mat-column-sku, .mat-column-ean {
+.mat-column-sku,
+.mat-column-ean {
     width: 200px;
     min-width: 200px;
 }
