--- a/src/app/components/pages/login/login.component.css
+++ b/src/app/components/pages/login/login.component.css
@@ -10,10 +10,10 @@
 .container {
     box-sizing: border-box;
     padding: 30px 30px 30px 30px;
-    background-image: url('../../../../assets/images/warehouse_blur.png');
+    background-image: url("../../../../assets/images/warehouse_blur.png");
     background-position: center;
     height: 100%;
-    overflow-y: scroll;
+    overflow: auto;
     z-index: 10;
 }
 
@@ -22,6 +22,10 @@
     z-index: 999;
     bottom: 50px;
     right: 50px;
+}
+
+.logout-button, .reset-pwd-button {
+    margin-right: 10px;
 }
 
 @media screen and (max-width: 460px) {
@@ -46,7 +50,7 @@ mat-form-field {
 }
 
 .authenticated-container {
-    animation: 0.75s fadeIn
+    animation: 0.75s fadeIn;
 }
 
 .column {
